spectec/test/elab/neg/relation-input-hint-empty.spectec
;; A relation's input hint is present but lists no input positions.

syntax foo = nat

relation R: foo |- foo
  hint(input)
